--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor Divisas</title>
-    <link rel="stylesheet" href="/css/stilo.css">
+    <link rel="stylesheet" href="./css/stilo.css">
 </head>
 <body>
     <div class="contain">
 		<div class="img">
-			<img src="/img/bg.svg">
+			<img src="./img/bg.svg">
 		</div>
     <form action="" class="form-register">
         <h1>Simulador de divisas</h1>
@@ -23,6 +23,6 @@
         <input class="cuadro" type="number" id="valor" min="1" max="100000" placeholder="Ingrese un numero">
         <input class="botons" type="button" id="cotizador" value="Cotizar" onclick="convertir()">
     </form>
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
